# advent-of-code-2025

./: README.md  noxfile.py  pyproject.toml
days/01/: README.md  main.py  test.py
days/02/: README.md  main.py  test.py
days/03/: README.md  main.py  test.py
days/04/: README.md  main.py  test.py
days/05/: README.md  main.py  test.py
days/06/: README.md  main.py  test.py
days/07/: README.md  main.py  test.py
days/08/: README.md  main.py  test.py
days/09/: README.md  main.py  test.py
template/: cookiecutter.json  extensions.py
template/{{ cookiecutter.__day_padded }}/: README.md  main.py  test.py
